Update .env file with Bright Data and MongoDB credentials

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 BRIGHT_DATA_USERNAME = brd-customer-hl_cf4be435-zone-zentracker
 BRIGHT_DATA_PASSWORD = svdjf7gwek4w
+
+MONGODB_URI = mongodb+srv://vaidyameet2004:rnAxr11Dm95nIhxY@cluster0.gprrotp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+MONGODB_PASSWORD = rnAxr11Dm95nIhxY
